fix: use Java 17-compatible list access in HospitalService
Replace List.getFirst() (Java 21) with get(0) so Docker builds on temurin-17 succeed.

Co-authored-by: Cursor <cursoragent@cursor.com>